# encord-agents

./: .gitignore  .pre-commit-config.yaml  README.md  firebase.json  mkdocs.yml  pyproject.toml
.firebase/: hosting.ZG9jcw.cache  hosting.c2l0ZQ.cache
.github/actions/setup-root-poetry-environment/: action.yml
.github/workflows/: aikido.yml  publish.yml  pull-request.yml  update-docs.yml
docker/clip-image-classification/: README.md  clip-image-classification.py
docker/detr-video-labeling/: README.md
docker/gemma-3-routing/: README.md  gemma-3.py
docker/llm-document-classification/: README.md
docker/llm-image-captioning/: Dockerfile  README.md  llm-image-captioning.py
docs/: authentication.md  basic_example.md  dependencies.md  getting_started.md  index.md  installation.md  pre_built_agents.md
docs/code_examples/celery/: README.md  populate_queue.mdx  populate_queue.py  queue_runner_example.md  queue_runner_example.py  worker.mdx  worker.py
docs/code_examples/fastapi/: fastapi_frame_classification.md  fastapi_frame_classification.py  fastapi_object_classification.md  fastapi_object_classification.py  fastapi_recaption_video.md  fastapi_recaption_video.py  frame_classification.py  object_classification.py
docs/code_examples/gcp/: gcp_add_bounding_box.mdx  gcp_add_bounding_box.py  gcp_frame_classification.md  gcp_frame_classification.py  gcp_object_classification.mdx  gcp_object_classification.py  gcp_recaption_video.mdx  gcp_recaption_video.py
docs/code_examples/modal/: editor_add_bitmask.md  editor_add_bitmask.py  editor_cotracker3.mdx  editor_cotracker3.py  queue_runner_example.md  queue_runner_example.py
docs/code_examples/tasks/: modal_job_processing.md  modal_job_processing.py  prelabel_videos.py  prioritize_by_data_title.py  prioritize_by_data_title_specific.md  prioritize_by_data_title_specific.py  twin_project.py
docs/editor_agents/: aws_lambda.md  custom_domain.md  fastapi.md  gcp.md  index.md  modal.md  spec.md
docs/editor_agents/examples/: index.md
docs/editor_agents/examples 16-25-51-144/: index.md
docs/notebooks/: AgentRouterBasedOnAttributes.ipynb  audio_transcription_agent_multi_speaker.ipynb  hugging_face_agent_example.ipynb  llm_as_a_judge.ipynb  mask_rcnn_on_videos.ipynb  multistage_video_summarisation.ipynb  prelabel_videos_with_bounding_boxes.ipynb  recaption_video.ipynb  sentiment_analysis.ipynb  speech_sentiment_agent_single_speaker.ipynb  task_agent_route_on_annotator_name.ipynb  task_agent_set_priority.ipynb  twin_project_label_transfer.ipynb  yolo_example.ipynb
docs/overrides/partials/: content.html
docs/reference/: editor_agents.md
docs/task_agents/: custom_domain.md  index.md  queue_runner.md  runner.md  runner_intro.md  sequential_runner.md
docs/task_agents/examples/: index.md
encord_agents/: __init__.py  _version.py  exceptions.py
encord_agents/aws/: dependencies.py  wrappers.py
encord_agents/cli/: gcp.py  gcp_agent.py  main.py  print.py  test.py
encord_agents/core/: constants.py  data_model.py  ontology.py  pdf.py  rich_columns.py  settings.py  utils.py  video.py  vision.py
encord_agents/core/dependencies/: models.py  serverless.py  shares.py  utils.py
encord_agents/fastapi/: cors.py  dependencies.py  utils.py
encord_agents/fastapi_server/: __init__.py  dependencies.py
encord_agents/gcp/: dependencies.py  wrappers.py
encord_agents/gcp_functions/: __init__.py  wrappers.py
encord_agents/tasks/: __init__.py  bundle.py  dependencies.py  models.py  queue_runner.py  runner.py
encord_agents/tasks/runner/: queue_runner.py  runner_base.py  sequential_runner.py
encord_agents/utils/: colab.py  generic_utils.py
examples/gcp_functions/: add_bounding_box.py  main.py  requirements.txt
examples/tasks/: video_agent.py
scripts/: convert_py_to_mdx.py
scripts/agents-library-ref-scripts/Editor-Agents/: 1-gen-markdown-editor-agents.py  2-remove-consecutive-headings-editor-agents.py  3-remove-extra-blank-lines-editor-agents.py  4-delete-zero-byte-files-editor-agents.py  5-change_md_to_mdx-editor-agents.py
tests/: fixtures.py  test_default_payload.py  test_fastapi.py  test_fastapi_unit_tests.py  test_ontology_model.py  test_tasks.py  test_vision.py
(+15 files in other folders)
