[tool.poetry]
name = "encord-agents"
version = "0.1.0"
description = "A framework for easily producing custom agens for your Encord Workflows."
authors = ["Encord Team"]
readme = "README.md"
packages = [{ include = "encord_agents" }]

[tool.poetry.dependencies]
python = "^3.11"
encord = "^0.1.139"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
opencv-python = "^4.10.0.84"
numpy = "^2.1.1"
requests = "^2.32.3"


[tool.poetry.group.gcp-functions]
optional = true

[tool.poetry.group.gcp-functions.dependencies]
flask = "^3.0.3"
functions-framework = "^3.8.1"


[tool.poetry.group.fastapi.dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
