[tool.poetry]
name = "encord-agents"
version = "0.1.0"
description = "A framework for easily producing custom agens for your Encord Workflows."
authors = ["Encord Team"]
readme = "README.md"
packages = [{ include = "encord_agents" }]

[tool.poetry.dependencies]
# CLI-only dependencies
python = "^3.10"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
typer = "^0.12.5"
requests = "^2.32.3"

# No-CLI dependencies
encord = { version = "^0.1.139", optional = true }
opencv-python = { version = "^4.10.0.84", optional = true }
numpy = { version = "^2.1.1", optional = true }

# FastAPI dependencies
uvicorn = { version = "^0.31.0", optional = true }
fastapi = { extras = ["standard"], version = "^0.115.0", optional = true }

# GCP run function dependencies
click = { version = "8.1.7", optional = true }
cloudevents = { version = "1.11.0", optional = true }
deprecation = { version = "2.1.0", optional = true }
Flask = { version = "2.2.5", optional = true }
functions-framework = { version = "3.8.1", optional = true }
gunicorn = { version = "23.0.0", optional = true }
importlib-metadata = { version = "6.7.0", optional = true }
itsdangerous = { version = "2.1.2", optional = true }
jinja2 = { version = "3.1.4", optional = true }
MarkupSafe = { version = "2.1.5", optional = true }
packaging = { version = "24.0", optional = true }
watchdog = { version = "3.0.0", optional = true }
Werkzeug = { version = "2.2.3", optional = true }
zipp = { version = "3.15.0", optional = true }


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.28.0"
pyfzf = "^0.3.1"


[tool.poetry.extras]
core = ["numpy", "opencv-python", "encord"]
fastapi = ["numpy", "opencv-python", "encord", "fastapi", "uvicorn"]
gcp-functions = [
  "numpy",
  "opencv-python",
  "encord",
  "click",
  "cloudevents",
  "deprecation",
  "Flask",
  "function",
  "gunicorn",
  "importli",
  "itsdangerous",
  "jinja2",
  "MarkupSafe",
  "packaging",
  "watchdog",
  "Werkzeug",
  "zipp",
]

[tool.poetry.scripts]
encord-agents = "encord_agents.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
